Fix T55072: Top bar disappears when loading factory settings (causing ASAN crash)